tests/ui/const-generics/issues/issue-73491.min.stderr
error: `[u32; LEN]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-73491.rs:8:19
   |
LL | fn hoge<const IN: [u32; LEN]>() {}
   |                   ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 1 previous error

